TAG: seqcacheload-6-0-7-1
DATE: 01/04/2017
STAFF: lec 
CHANGES:
1) TR12069/obsolete db.setAutoTranslate()

TAG: seqcacheload-6-0-4-1
DATE: 06/16/2016
STAFF: lec
CHANGES:
1) convert to git

TAG: seqcacheload-6-0-2-4
TAG: seqcacheload-6-0-2-3
TAG: seqcacheload-6-0-2-2
TAG: seqcacheload-6-0-2-1
DATE: 12/02/2015, 12/07/2015
STAFF: lec
CHANGES:
seqmarker.py
1) TR12070/12038/dots/dfci/nia
2) TR12070/12116/bitype conflicts

branch is :  tr12070-1
(made a mistake when making tr12070 branch)

TAG: seqcacheload-tr12070-1
DATE: 12/02/2015
STAFF: lec
CHANGES:
1) TR12070/12038/dots/dfci/nia

TAG: seqcacheload-tr12070-BP
DATE: 09/23/2015
STAFF: lec
CHANGES:
1) branch point tag for TR12070/12038

TAG: seqcacheload-6-0-0-6
DATE: 09/10/2015
STAFF: sc
CHANGES: TR12108 MCV/biotype mapping changes
1) Configuration.default - new mapping for all providers created by Sophia
   also one var per provider as length supported by linux
2) seqmarker.py - remove concatenation of multi vars per provider

TAG: seqcacheload-6-0-0-5
DATE: 08/18/2015
STAFF: lec 
CHANGES:
1) TR11750/seqdummy.py : removed "upper()" clause

TAG: seqcacheload-6-0-0-4
TAG: seqcacheload-6-0-0-3
TAG: seqcacheload-6-0-0-2
TAG: seqcacheload-6-0-0-1
DATE: 07/22/2015, 07/29/2015
STAFF: lec, kstone 
CHANGES:
1) TR11750/postgres
2) bug fix to seqdummy.py
3) bug fixes for seqprobe.py and seqmarker.py

TAG: seqcacheload-sybase
DATE: 06/25/2015
STAFF: lec 
CHANGES:
1) TR11750/before removing sybase flipablity

TAG : seqcacheload-5-2-2-4
TAG : seqcacheload-5-2-2-3
DATE : 05/22/2015, 05/26/2015
STAFF : lec
CHANGES: 
1) TR11652/seqdescription/obsolete

TAG : seqcacheload-5-2-2-2
TAG : seqcacheload-5-2-2-1
DATE : 05/21/2015, 05/22/2015
STAFF : lec
CHANGES: 
1) TR12029/comparePostgres.py : obsolete

TAG: seqcacheload-5-2-1-6
DATE: 04/10/2015
STAFF: kstone
1) converted seqprobe.py

TAG: seqcacheload-5-2-1-5
DATE: 03/02/2015
STAFF: dbm	
CHANGES:
1) Configuration.default - Don't set DB_TYPE -- done in mgiconfig

TAG: seqcacheload-5-2-1-4